--- a/s.html
+++ b/s.html
@@ -485,9 +485,9 @@ img#logo {
 <img id="qrcode" height="170em" class="middle" src=""/>
 <!-- <p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br> -->
 <p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
-<button onclick="window.location.href='http://rulutklyntc.top/admin'" class="button1" >管理员</button>
-<button onclick="window.location.href='https://i.loli.net/2021/06/28/6DWiGxnLurRep24.jpg'" class="button2" >通知群</button>
-<button onclick="window.location.href='https://i.loli.net/2021/06/28/6DWiGxnLurRep24.jpg'" class="button3" >管理员</button>
+<p><center><button onclick="window.location.href='http://rulutklyntc.top/admin'" class="button1" >管理员</button></center></p>
+<button onclick="window.location.href='https://i.loli.net/2021/06/28/6DWiGxnLurRep24.jpg'" class="button2" >QQ通知</button>
+<button onclick="window.location.href='https://i.loli.net/2021/07/29/wyYC1k52bmxvirZ.jpg'" class="button3" >微信通知</button>
 <p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
 <p align="center"><a  style="  text-decoration:none;font-size: 30px;   color:aqua;   font-family: 微软雅黑;">直接扫码，无视升级提示</a></p><br><br><br>
 <p align="center"><a  style="  text-decoration:none;font-size: 50px;     font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
