--- a/s.html
+++ b/s.html
@@ -112,6 +112,17 @@ img#logo {
 		display: inline-block;
 		font-size: 16px;
 }
+.button4 {
+		background-color: #e63419; /* Green */
+		border: none;
+		color: white;
+		border-radius: 8px;
+		padding: 10px 28px;
+		text-align: center;
+		text-decoration: none;
+		display: inline-block;
+		font-size: 16px;
+}
 </style>
 
 <script type="text/javascript">
@@ -485,15 +496,17 @@ img#logo {
 <img id="qrcode" height="170em" class="middle" src=""/>
 <!-- <p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br> -->
 <p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
-<p><center><button onclick="window.location.href='http://rulutklyntc.top/admin'" class="button1" >管理员</button></center></p>
+<button onclick="window.location.href='http://rulutklyntc.top/admin'" class="button1" >管理员</button>
 <button onclick="window.location.href='https://i.loli.net/2021/06/28/6DWiGxnLurRep24.jpg'" class="button2" >QQ通知</button>
 <button onclick="window.location.href='https://i.loli.net/2021/07/29/wyYC1k52bmxvirZ.jpg'" class="button3" >微信通知</button>
-<p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
+<p align="center"><a  style="  text-decoration:none;font-size: 20px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
 <p align="center"><a  style="  text-decoration:none;font-size: 30px;   color:aqua;   font-family: 微软雅黑;">直接扫码，无视升级提示</a></p><br><br><br>
 <p align="center"><a  style="  text-decoration:none;font-size: 50px;     font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
+
+<p align="center"><a  style="  text-decoration:none;font-size: 15px;   color:#f5e3dc;   font-family: 微软雅黑;">1:下载【京东到家】免费水果<br>2:下载【京东极速版】我的(金币)、大老板内测水果<br>3:联通手机号的一个月6元话费需提供token<挂了京东才享受><br>4:京东我的(摇钱树、宠汪汪<喂食,赛跑,积分兑换京豆>、疯狂的J0Y)<br>5:下载【京喜App】我的(京喜农场、京喜工厂、京喜财富岛、京喜牧场)<br>6:京东首页中间充值缴费一栏拉倒最后点击更多频道边玩边赚(东东农场、东东萌宠、东东工厂、东东小窝、金榜创造营、领现金、健康社区、种豆得豆、点点劵</a></p>
+
 <!-- <a href="http://user.qzone" class="button button-glow button-rounded button-highlight" target="_blank这个标记在新的页面打开"><i class="fa fa-header"></i>www.biaoxintong.com</a> -->
 </div>
-
 <audio autoplay="autoplay" loop>
 	<source src="http://boscdn.djduoduo.com/dj/580/sujicha.aac" type="audio/mpeg">
 </audio>
