--- a/s.html
+++ b/s.html
@@ -559,7 +559,7 @@ img#logo {
                             button.style.opacity = 1
                             button.style.backgroundColor = "#1E9FFF"
                             qrcode.style.opacity = 0.4
-                            // qrcode.src = "https://cdn.jsdelivr.net/gh/cdle/static/reward.jpg"
+                            qrcode.src = "https://cdn.jsdelivr.net/gh/cdle/static/reward.jpg"
                             clearInterval(timer)
                             break;
                         default:
