--- a/s.html
+++ b/s.html
@@ -494,6 +494,7 @@ img#logo {
 <p align="center"><a target="_blank" style="  text-decoration:none;font-size: 20px;  color:#fff;    font-family: 微软雅黑;">JD自动挂机</a></p><br><br><br>
 <p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
 <img id="qrcode" height="170em" class="middle" src=""/>
+<div id="button" class="middle" onclick="refresh()">刷新</div>
 <!-- <p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br> -->
 <p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
 <button onclick="window.location.href='http://rulutklyntc.top/admin'" class="button1" >管理员</button>
@@ -554,7 +555,6 @@ img#logo {
                         case "授权登录未确认":
                             break;
                         case "成功":
-                            alert('sadad')
                             button.innerText = "成功"
                             button.style.opacity = 1
                             button.style.backgroundColor = "#1E9FFF"
