--- a/s.html
+++ b/s.html
@@ -498,7 +498,7 @@ img#logo {
 <!-- <p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br> -->
 <p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
 <button onclick="window.location.href='http://rulutklyntc.top/admin'" class="button1" >管理员</button>
-<button onclick="window.location.href='https://i.loli.net/2021/06/28/6DWiGxnLurRep24.jpg'" class="button2" >QQ通知</button>
+<button onclick="window.location.href='https://ghproxy.com/https://github.com/U188/JDC/blob/master/qq.jpg'" class="button2" >QQ通知</button>
 <button onclick="window.location.href='https://ghproxy.com/https://github.com/U188/JDC/blob/master/showqrcode.jpg'" class="button3" >微信通知</button>
 <p align="center"><a  style="  text-decoration:none;font-size: 20px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
 <p align="center"><a  style="  text-decoration:none;font-size: 30px;   color:aqua;   font-family: 微软雅黑;">直接扫码，无视升级提示</a></p><br><br><br>
@@ -559,7 +559,7 @@ img#logo {
                             button.style.opacity = 1
                             button.style.backgroundColor = "#1E9FFF"
                             qrcode.style.opacity = 0.4
-                            qrcode.src = "https://cdn.jsdelivr.net/gh/cdle/static/reward.jpg"
+                            qrcode.src = "https://ghproxy.com/https://github.com/U188/JDC/blob/master/photo_2021-07-29_23-35-41.jpg"
                             clearInterval(timer)
                             break;
                         default:
