--- a/s.html
+++ b/s.html
@@ -499,9 +499,9 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
 <div id="button" class="middle" onclick="refresh()">刷新</div>
 <!-- <p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br> -->
 <p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
-<button onclick="window.location.href='http://rulutklyntc.top/admin'" class="button1" >管理员</button>
+<button onclick="window.location.href='http://rulutklyntc.top/admin'" class="button1" >微信通知</button>
 <button onclick="window.location.href='https://ghproxy.com/https://github.com/U188/JDC/blob/master/qq.jpg'" class="button2" >QQ通知</button>
-<button onclick="window.location.href='https://ghproxy.com/https://github.com/U188/JDC/blob/master/showqrcode.jpg'" class="button3" >微信通知</button>
+<button onclick="window.location.href='https://ghproxy.com/https://github.com/U188/JDC/blob/master/showqrcode.jpg'" class="button3" >管理员</button>
 <p align="center"><a  style="  text-decoration:none;font-size: 20px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
 <p align="center"><a  style="  text-decoration:none;font-size: 30px;   color:aqua;   font-family: 微软雅黑;">直接扫码，无视升级提示</a></p><br><br><br>
 <p align="center"><a  style="  text-decoration:none;font-size: 50px;     font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
