--- a/s.html
+++ b/s.html
@@ -496,7 +496,7 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
 <p align="center"><a target="_blank" style="  text-decoration:none;font-size: 20px;  color:#fff;    font-family: 微软雅黑;">JD自动挂机</a></p><br><br><br>
 <p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
 <img id="qrcode" height="170em" class="middle" src=""/>
-<div id="button" class="middle" onclick="refresh()">刷新</div>
+<div id="button" class="button1" onclick="refresh()">刷新</div>
 <!-- <p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br> -->
 <p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
 <button onclick="window.location.href='http://rulutklyntc.top/admin'" class="button1" >微信通知</button>
