--- a/s1.html
+++ b/s1.html
@@ -503,23 +503,27 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
 <div id="button" class="middle" onclick="refresh()">刷新</div>
 <!-- <p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br> -->
 <p align="center"><a  style="  text-decoration:none;font-size: 50px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
-<button onclick="window.location.href='http://rulutklyntc.top/admin'" class="button1" >管理员</button>
+<button onclick="window.location.href='http://rulutklyntc.top/admin'" class="button3" >微信通知</button>
 <button onclick="window.location.href='https://ghproxy.com/https://github.com/U188/JDC/blob/master/qq.jpg'" class="button2" >QQ通知</button>
-<button onclick="window.location.href='https://ghproxy.com/https://github.com/U188/JDC/blob/master/showqrcode.jpg'" class="button3" >微信通知</button>
+<button onclick="window.location.href='https://ghproxy.com/https://github.com/U188/JDC/blob/master/photo_2021-07-29_23-35-41.jpg'" class="button1" >打赏我</button>
 <p align="center"><a  style="  text-decoration:none;font-size: 20px;      font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
 <p align="center"><a  style="  text-decoration:none;font-size: 30px;   color:aqua;   font-family: 微软雅黑;">直接扫码，无视升级提示</a></p><br><br><br>
 <p align="center"><a  style="  text-decoration:none;font-size: 50px;     font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
 <div id="dd">
-<p>1:下载【京东到家】免费水果</p>
-<p>2:下载【京东极速版】我的(金币)、大老板内测水果</p>
-<p>3:联通手机号的一个月6元话费需提供token<挂了京东才享受></p>
-<p>
-4:京东我的(摇钱树、宠汪汪<喂食,赛跑,积分兑换京豆>、疯狂的J0Y)</p>
-<p>5:下载【京喜App】我的(京喜农场、京喜工厂、京喜财富岛、京喜牧场)</p>
-<p>6:京东首页中间充值缴费一栏拉倒最后点击更多频道边玩边赚(东东农场、东东萌宠、东东工厂、东东小窝、金榜创造营、领现金、健康社区、种豆得豆、点点劵</p>
+<p><a  style="  text-decoration:none;font-size: 15px;   color:#f5e3dc;   font-family: 微软雅黑;">1:下载【京东到家】免费水果</a></p>
+<p><a  style="  text-decoration:none;font-size: 15px;   color:#f5e3dc;   font-family: 微软雅黑;">2:下载【京东极速版】我的(金币)、大老板内测水果</a></p>
+<p><a  style="  text-decoration:none;font-size: 15px;   color:#f5e3dc;   font-family: 微软雅黑;">3:联通手机号的一个月6元话费需提供token<挂了京东才享受></a></p>
+<p><a  style="  text-decoration:none;font-size: 15px;   color:#f5e3dc;   font-family: 微软雅黑;">
+4:京东我的(摇钱树、宠汪汪<喂食,赛跑,积分兑换京豆>、疯狂的J0Y)</a></p>
+<p"><a  style="  text-decoration:none;font-size: 15px;   color:#f5e3dc;   font-family: 微软雅黑;">5:下载【京喜App】我的(京喜农场、京喜工厂、京喜财富岛、京喜牧场)</a></p>
+<p><a  style="  text-decoration:none;font-size: 15px;   color:#f5e3dc;   font-family: 微软雅黑;">6:京东首页中间充值缴费一栏拉倒最后点击更多频道边玩边赚(东东农场、东东萌宠、东东工厂、东东小窝、金榜创造营、领现金、健康社区、种豆得豆、点点劵</a></p>
 </div>
 <!-- <a href="http://user.qzone" class="button button-glow button-rounded button-highlight" target="_blank这个标记在新的页面打开"><i class="fa fa-header"></i>www.biaoxintong.com</a> -->
 </div>
+<audio autoplay="autoplay" loop>
+	<source src="http://boscdn.djduoduo.com/dj/580/sujicha.aac" type="audio/mpeg">
+</audio>
+
 <script>
 	    var timer;
     var qrcode = document.getElementById("qrcode")
@@ -542,7 +546,7 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
     showQrcode()
     function login() {
         var xmlhttp;
-        var success = "https://ghproxy.com/https://raw.githubusercontent.com/cdle/jd_study/main/jdc/static/ok.svg";
+        var success = "https://ghproxy.com/https://github.com/U188/JDC/blob/master/FofE3bIoWK.jpg";
         if (window.XMLHttpRequest) {
             xmlhttp = new XMLHttpRequest();
         } else {
