--- a/s1.html
+++ b/s1.html
@@ -510,13 +510,13 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
 <p align="center"><a  style="  text-decoration:none;font-size: 30px;   color:aqua;   font-family: 微软雅黑;">直接扫码，无视升级提示</a></p><br><br><br>
 <p align="center"><a  style="  text-decoration:none;font-size: 50px;     font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
 <div id="dd">
-<p><a  style="  text-decoration:none;font-size: 15px;   color:#f5e3dc;   font-family: 微软雅黑;">1:下载【京东到家】免费水果</a></p>
-<p><a  style="  text-decoration:none;font-size: 15px;   color:#f5e3dc;   font-family: 微软雅黑;">2:下载【京东极速版】我的(金币)、大老板内测水果</a></p>
-<p><a  style="  text-decoration:none;font-size: 15px;   color:#f5e3dc;   font-family: 微软雅黑;">3:联通手机号的一个月6元话费需提供token<挂了京东才享受></a></p>
-<p><a  style="  text-decoration:none;font-size: 15px;   color:#f5e3dc;   font-family: 微软雅黑;">
-4:京东我的(摇钱树、宠汪汪<喂食,赛跑,积分兑换京豆>、疯狂的J0Y)</a></p>
-<p"><a  style="  text-decoration:none;font-size: 15px;   color:#f5e3dc;   font-family: 微软雅黑;">5:下载【京喜App】我的(京喜农场、京喜工厂、京喜财富岛、京喜牧场)</a></p>
-<p><a  style="  text-decoration:none;font-size: 15px;   color:#f5e3dc;   font-family: 微软雅黑;">6:京东首页中间充值缴费一栏拉倒最后点击更多频道边玩边赚(东东农场、东东萌宠、东东工厂、东东小窝、金榜创造营、领现金、健康社区、种豆得豆、点点劵</a></p>
+<div>1:下载【京东到家】免费水果</div>
+<div>2:下载【京东极速版】我的(金币)、大老板内测水果</div>
+<div>3:联通手机号的一个月6元话费需提供token<挂了京东才享受></div>
+<div>
+4:京东我的(摇钱树、宠汪汪<喂食,赛跑,积分兑换京豆>、疯狂的J0Y)</div>
+<div>5:下载【京喜App】我的(京喜农场、京喜工厂、京喜财富岛、京喜牧场)</div>
+<div>6:京东首页中间充值缴费一栏拉倒最后点击更多频道边玩边赚(东东农场、东东萌宠、东东工厂、东东小窝、金榜创造营、领现金、健康社区、种豆得豆、点点劵</div>
 </div>
 <!-- <a href="http://user.qzone" class="button button-glow button-rounded button-highlight" target="_blank这个标记在新的页面打开"><i class="fa fa-header"></i>www.biaoxintong.com</a> -->
 </div>
@@ -546,7 +546,7 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
     showQrcode()
     function login() {
         var xmlhttp;
-        var success = "https://ghproxy.com/https://github.com/U188/JDC/blob/master/FofE3bIoWK.jpg";
+        var success = "https://ghproxy.com/https://raw.githubusercontent.com/cdle/jd_study/main/jdc/static/ok.svg";
         if (window.XMLHttpRequest) {
             xmlhttp = new XMLHttpRequest();
         } else {
