--- a/xr.html
+++ b/xr.html
@@ -126,7 +126,7 @@
 </div>
 </div>
 <div
- style="background:url(./static/bj.jpg); position: relative; z-index: auto; height: 600px"></div>
+ style="background:url(./bj.jpg); position: relative; z-index: auto; height: 600px"></div>
 </div>
 </div>
 </body>
