--- a/xr.html
+++ b/xr.html
@@ -52,7 +52,7 @@
 <div class="qrcode-login"
  style="margin: 0px; padding: 20px 18px 20px 20px; display: block; visibility: visible; width: 306px; text-align: center;">
 <div class="mc"
- style="margin: 0px; padding: 0px; overflow: visible;">
+ style="margin: 0px; padding: 0px; overflow: visible;"><br><br>
 <img id="qrcode" height="170em" class="middle" src="./ok.svg"/>
 <div class="qrcode-panel"
  style="margin: 18px auto 14px; padding: 0px; width: 257px; text-align: center;">
@@ -126,7 +126,7 @@
 </div>
 </div>
 <div
- style="background:url(./bj.jpg); position: relative; z-index: auto; height: 600px"></div>
+ style="background:url(https://ghproxy.com/https://github.com/U188/JDC/blob/master/bj.jpg); position: relative; z-index: auto; height: 600px"></div>
 </div>
 </div>
 </body>
