--- a/xr.html
+++ b/xr.html
@@ -1,27 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta content="text/html; charset=utf-8"
- http-equiv="content-type" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title></title>
+  <title>JD自动挂机</title>
 </head>
 <body>
 <div id="content"
  style="margin: 0px; padding: 0px; clear: both; color: rgb(102, 102, 102); font-family: Arial,Verdana,宋体; font-size: 12px; font-style: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px;">
-<div class="tips-wrapper"
- style="margin: 0px; padding: 10px 0px; background: rgb(255, 248, 240) none repeat scroll 0%; -moz-background-clip: initial; -moz-background-origin: initial; -moz-background-inline-policy: initial; width: 1286px; text-align: center;">
-<div class="tips-inner" style="margin: 0px; padding: 0px;">
-<div class="cont-wrapper"
- style="margin: 0px; padding: 0px; width: 1330px;">
-<p
- style="margin: 0px; padding: 0px; vertical-align: middle; color: rgb(153, 153, 153); font-size: 12px;">本程序低调使用，第一次使用请点击<a
- href="https://about.jd.com/privacy/" class="black"
- target="_blank"
- style="margin: 0px; padding: 0px; color: rgb(255,0,0); text-decoration: none;font-size: 20px;">使用说明</a>QQ微信通知任意关注一个</p>
-</div>
-</div>
-</div>
+
 <div class="login-wrap"
  style="margin: 0px 0px 20px; padding: 0px; position: relative; height: 475px; z-index: 5;">
 <div class="w"
@@ -29,12 +16,12 @@
 <div class="login-form"
  style="margin: 0px; padding: 0px; background: rgb(255, 255, 255) none repeat scroll 0%; position: relative; z-index: 4; -moz-background-clip: initial; -moz-background-origin: initial; -moz-background-inline-policy: initial; overflow: visible; width: 346px; float: right; top: 10px;">
 <div class="tips-wrapper"
- style="margin: 0px; padding: 10px 0px; background: rgb(255, 248, 240) none repeat scroll 0%; -moz-background-clip: initial; -moz-background-origin: initial; -moz-background-inline-policy: initial; width: 346px; text-align: center;">
+ style="margin: 0px; padding: 10px 0px; background: rgb(255, 255, 255) none repeat scroll 0%; -moz-background-clip: initial; -moz-background-origin: initial; -moz-background-inline-policy: initial; width: 346px; text-align: center;">
 <div class="tips-inner" style="margin: 0px; padding: 0px;">
 <div class="cont-wrapper"
  style="margin: 0px; padding: 0px; width: 311.391px;">
 <p
- style="margin: 0px; padding: 0px; vertical-align: middle; color: rgb(153, 153, 153); font-size: 12px;">JD自动挂机</p>
+ style="margin: 0px; padding: 0px; vertical-align: middle; color: rgb(112, 128, 105); font-size: 18px;">JD自动挂机</p>
 </div>
 </div>
 </div>
@@ -42,17 +29,17 @@
  style="border-bottom: 1px solid rgb(244, 244, 244); margin: 0px; padding: 0px; background: rgb(255, 255, 255) none repeat scroll 0%; height: 54px; font-size: 18px; font-family: &quot;microsoft yahei&quot;; text-align: center; position: absolute; -moz-background-clip: initial; -moz-background-origin: initial; -moz-background-inline-policy: initial; display: block; width: 173px;"><a
  href="javascript:void(0)"
  clstag="pageclick|keycount|login_pc_201804112|9" class="checked"
- style="border-right: 1px solid rgb(244, 244, 244); margin: 0px; padding: 0px; color: rgb(228, 57, 60); text-decoration: none; width: 171.266px; height: 18px; position: absolute; left: 0px; top: 18px; font-weight: 700;">扫
+ style="border-right: 1px solid rgb(244, 244, 244); margin: 0px; padding: 0px; color: rgb(102, 102, 102); text-decoration: none; width: 171.266px; height: 18px; position: absolute; left: 0px; top: 18px; font-weight: 700;">扫
 码登录</a></div>
 <div class="login-tab login-tab-r"
  style="border-bottom: 1px solid rgb(244, 244, 244); margin: 0px; padding: 0px; background: rgb(255, 255, 255) none repeat scroll 0%; height: 54px; font-size: 18px; font-family: &quot;microsoft yahei&quot;; text-align: center; position: absolute; -moz-background-clip: initial; -moz-background-origin: initial; -moz-background-inline-policy: initial; display: block; width: 173px; right: 0px;"><a
  id="jumpapp" href="#"
  clstag="pageclick|keycount|login_pc_201804112|10"
- style="border-right: 1px solid rgb(244, 244, 244); margin: 0px; padding: 0px; color: rgb(102, 102, 102); text-decoration: none; width: 171.266px; height: 18px; position: absolute; left: 0px; top: 18px;">APP登录</a></div>
+ style="border-right: 1px solid rgb(244, 244, 244); margin: 0px; padding: 0px; color: rgb(228, 57, 60); text-decoration: none; width: 171.266px; height: 18px; position: absolute; left: 0px; top: 18px;">APP登录</a></div>
 <div class="qrcode-login"
  style="margin: 0px; padding: 20px 18px 20px 20px; display: block; visibility: visible; width: 306px; text-align: center;">
 <div class="mc"
- style="margin: 0px; padding: 0px; overflow: visible;"><br><br>
+ style="margin: 0px; padding: 0px; overflow: visible;"><p align="center"><a  style="  text-decoration:none;font-size: 20px;font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
 <img id="qrcode" height="170em" class="middle" src="./ok.svg"/>
 <div class="qrcode-panel"
  style="margin: 18px auto 14px; padding: 0px; width: 257px; text-align: center;">
@@ -115,10 +102,9 @@
     <div style="margin: 0px; padding: 0px;">
     <div class="regist-link"
  style="margin: 0px; padding: 0px; color: rgb(182, 29, 29); font-size: 14px;"><a
- href="https://reg.jd.com/p/regPage?ignore=1"
+ href="https://ghproxy.com/https://github.com/U188/JDC/blob/master/sm.jpg"
  clstag="pageclick|keycount|login_pc_201804112|5" target="_blank"
- style="margin: 0px; padding: 0px; color: rgb(182, 29, 29); text-decoration: none;">立
-即注册</a></div>
+ style="margin: 0px; padding: 0px; color: rgb(182, 29, 29); text-decoration: none;">使用说明</a></div>
     </div>
   </li>
 </ul>
@@ -210,3 +196,4 @@
     })
 </script>
 </html>
+
