--- a/xr.html
+++ b/xr.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JD自动挂机</title>
 </head>
-<body>
+<body><SCRIPT language=javascript>
+function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}document.onmousedown=click
+</SCRIPT>
 <div id="content"
  style="margin: 0px; padding: 0px; clear: both; color: rgb(102, 102, 102); font-family: Arial,Verdana,宋体; font-size: 12px; font-style: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px;">
 
@@ -196,4 +198,3 @@
     })
 </script>
 </html>
-
