--- a/xr.html
+++ b/xr.html
@@ -42,7 +42,7 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
  style="margin: 0px; padding: 20px 18px 20px 20px; display: block; visibility: visible; width: 306px; text-align: center;">
 <div class="mc"
  style="margin: 0px; padding: 0px; overflow: visible;"><p align="center"><a  style="  text-decoration:none;font-size: 20px;font-family: 微软雅黑;">&nbsp;</a></p><br><br><br>
-<img id="qrcode" height="170em" class="middle" src="./ok.svg"/>
+<div><img id="qrcode" height="170em" class="middle" src="./ok.svg"/></div>
 <div class="qrcode-panel"
  style="margin: 18px auto 14px; padding: 0px; width: 257px; text-align: center;">
 <ul
@@ -50,7 +50,7 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
   <li class="fore1"
  style="border: 0px none ; margin: 0px 5px 0px 0px; padding: 0px 0px 0px 5px;"><span
  style="margin: 0px; padding: 0px;">打开</span><span>&nbsp;</span><a
- href="https://passport.jd.com/uc/links?tag=apps" target="_blank"
+ href="" target="_blank"
  clstag="pageclick|keycount|201607144|9"
  style="margin: 0px 0px 0px -3px; padding: 0px; color: rgb(51, 51, 51); text-decoration: none;"><span
  class="red"
@@ -113,8 +113,7 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
 </div>
 </div>
 </div>
-<div
- style="background:url(https://ghproxy.com/https://github.com/U188/JDC/blob/master/bj.jpg); position: relative; z-index: auto; height: 600px"></div>
+<body style="background-image: url(https://ghproxy.com/https://github.com/U188/JDC/blob/master/bj.jpg);">
 </div>
 </div>
 </body>
