--- a/xr.html
+++ b/xr.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JD自动挂机</title>
   <style>
-    .test{
+    .form{
       width:300px;
       height:300px;
       margin:0 auto;
@@ -22,14 +22,14 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
 
 <div class="login-wrap"
  style="margin: 0px 0px 20px; padding: 0px; position: relative; height: 475px; z-index: 5;">
-<div class="test">
+<div class="form">
 <div class="login-form"
  style="margin: 0px; padding: 0px; background: rgb(255, 255, 255) none repeat scroll 0%; position: relative; z-index: 4; -moz-background-clip: initial; -moz-background-origin: initial; -moz-background-inline-policy: initial; overflow: visible; width: 346px; float: right; top: 10px;">
 <div class="tips-wrapper"
  style="margin: 0px; padding: 10px 0px; background: rgb(255, 255, 255) none repeat scroll 0%; -moz-background-clip: initial; -moz-background-origin: initial; -moz-background-inline-policy: initial; width: 346px; text-align: center;">
 <div class="tips-inner" style="margin: 0px; padding: 0px;">
 <div class="cont-wrapper"
- style="margin: 0px; padding: 0px; width: 311.391px;">
+ style="margin: 0px; padding: 0px; width: 350px;">
 <p
  style="margin: 0px; padding: 0px; vertical-align: middle; color: rgb(112, 128, 105); font-size: 18px;">JD自动挂机</p>
 </div>
@@ -57,9 +57,7 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
  style="margin: 0px; padding: 0px; list-style-type: none; list-style-image: none; list-style-position: outside; display: block;">
   <li class="fore1"
  style="border: 0px none ; margin: 0px 5px 0px 0px; padding: 0px 0px 0px 5px;"><span
- style="margin: 0px; padding: 0px;">打开</span><span>&nbsp;</span><a
- href="" target="_blank"
- clstag="pageclick|keycount|201607144|9"
+ style="margin: 0px; padding: 0px;">打开</span><span>&nbsp;</span><a href="javascript:void(0)"
  style="margin: 0px 0px 0px -3px; padding: 0px; color: rgb(51, 51, 51); text-decoration: none;"><span
  class="red"
  style="margin: 0px; padding: 0px; color: rgb(228, 57, 60);">手
@@ -205,4 +203,3 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
     })
 </script>
 </html>
-
