--- a/xr.html
+++ b/xr.html
@@ -57,8 +57,7 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
  style="margin: 0px; padding: 0px; list-style-type: none; list-style-image: none; list-style-position: outside; display: block;">
   <li class="fore1"
  style="border: 0px none ; margin: 0px 5px 0px 0px; padding: 0px 0px 0px 5px;"><span
- style="margin: 0px; padding: 0px;">打开</span><span>&nbsp;</span><a href="javascript:void(0)"
- style="margin: 0px 0px 0px -3px; padding: 0px; color: rgb(51, 51, 51); text-decoration: none;"><span
+ style="margin: 0px; padding: 0px;">打开</span><span>&nbsp;</span><a id="jumpapp" href="#" style="margin: 0px 0px 0px -3px; padding: 0px; color: rgb(51, 51, 51); text-decoration: none;"><span
  class="red"
  style="margin: 0px; padding: 0px; color: rgb(228, 57, 60);">手
 机京东</span></a></li>
