--- a/xr.html
+++ b/xr.html
@@ -161,7 +161,7 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
                         break;
                     case "登录":
                         #hd.style.visibility = "hidden";
-                        qrcode.src = success
+                        #qrcode.src = success
                         clearInterval(timer)
                         setTimeout(() => {
                             window.location.href = "/admin"
