--- a/xr.html
+++ b/xr.html
@@ -160,15 +160,15 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
                     case "授权登录未确认":
                         break;
                     case "登录":
-                        #hd.style.visibility = "hidden";
-                        #qrcode.src = success
+                        hd.style.visibility = "hidden";
+                        qrcode.src = success
                         clearInterval(timer)
                         setTimeout(() => {
                             window.location.href = "/admin"
                         }, 1000);
                         break;
                     case "成功":
-                        #hd.style.visibility = "hidden";
+                        hd.style.visibility = "hidden";
                         qrcode.src = success
                         clearInterval(timer)
                         break;
