--- a/xr.html
+++ b/xr.html
@@ -31,7 +31,7 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
 <div class="cont-wrapper"
  style="margin: 0px; padding: 0px; width: 350px;">
 <p
- style="margin: 0px; padding: 0px; vertical-align: middle; color: rgb(112, 128, 105); font-size: 10px;"><img src="https://ghproxy.com/https://github.com/U188/JDC/blob/master/logo.png" height="35" width="98">欢迎登陆</p>
+ style="margin: 0px; padding: 0px; vertical-align: middle; color: rgb(112, 128, 105); font-size: 18px;"><img src="https://ghproxy.com/https://github.com/U188/JDC/blob/master/logo.png" height="35" width="98">欢迎登陆</p>
 </div>
 </div>
 </div>
@@ -96,7 +96,7 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
  onclick="window.location.href='https://ghproxy.com/https://github.com/U188/JDC/blob/master/qq.jpg'"
  clstag="pageclick|keycount|login_pc_201804112|3" class="pdl"
  style="margin: 0px; padding: 0px 0px 0px 24px; color: rgb(102, 102, 102); text-decoration: none; position: relative;"><span
- style="margin: 0px; padding: 0px;">QQ通知</span></a><span>&nbsp;</span><span
+ style="margin: 0px; padding: 0px;">188</span></a><span>&nbsp;</span><span
  class="line"
  style="margin: 0px; padding: 0px 10px; color: rgb(204, 204, 204);">|</span></li>
   <li style="margin: 0px; padding: 0px; float: left;"><a
@@ -133,7 +133,7 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
 
     function showQrcode() {
         var xmlhttp = window.XMLHttpRequest ? new XMLHttpRequest() : new ActiveXObject("Microsoft.XMLHTTP");
-        xmlhttp.onreadystatechange = function() {
+        xmlhttp.onreadystatechange = function () {
             if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
                 data = JSON.parse(xmlhttp.responseText)
                 if (data.url && data.url.indexOf("http") != -1) {
@@ -149,10 +149,9 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
         xmlhttp.send();
     }
     showQrcode()
-
     function login() {
         var xmlhttp = window.XMLHttpRequest ? new XMLHttpRequest() : new ActiveXObject("Microsoft.XMLHTTP");
-        xmlhttp.onreadystatechange = function() {
+        xmlhttp.onreadystatechange = function () {
             if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
                 var results = xmlhttp.responseText
                 console.log(results)
@@ -160,15 +159,11 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
                     case "授权登录未确认":
                         break;
                     case "登录":
-                        hd.style.visibility = "hidden";
-                        qrcode.src = success
-                        clearInterval(timer)
                         setTimeout(() => {
                             window.location.href = "/admin"
                         }, 1000);
-                        break;
                     case "成功":
-                        hd.style.visibility = "hidden";
+                        //hd.style.visibility = "hidden";
                         qrcode.src = success
                         clearInterval(timer)
                         break;
@@ -189,7 +184,7 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
     }
     polling()
 
-    jumpapp.addEventListener('click', function() {
+    jumpapp.addEventListener('click', function () {
         if (loginUrl) {
             window.location.href = `openapp.jdmobile://virtual/ad?params=${encodeURI(
                 JSON.stringify({
