--- a/xr.html
+++ b/xr.html
@@ -96,7 +96,7 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
  onclick="window.location.href='https://ghproxy.com/https://github.com/U188/JDC/blob/master/qq.jpg'"
  clstag="pageclick|keycount|login_pc_201804112|3" class="pdl"
  style="margin: 0px; padding: 0px 0px 0px 24px; color: rgb(102, 102, 102); text-decoration: none; position: relative;"><span
- style="margin: 0px; padding: 0px;">188</span></a><span>&nbsp;</span><span
+ style="margin: 0px; padding: 0px;">QQ通知</span></a><span>&nbsp;</span><span
  class="line"
  style="margin: 0px; padding: 0px 10px; color: rgb(204, 204, 204);">|</span></li>
   <li style="margin: 0px; padding: 0px; float: left;"><a
