--- a/xr.html
+++ b/xr.html
@@ -93,7 +93,7 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
  style="margin: 0px; padding: 0px; list-style-type: none; list-style-image: none; list-style-position: outside; display: block;">
   <li style="margin: 0px; padding: 0px; float: left;"><a
  href="javascript:void(0)"
- onclick="window.location.href='https://ghproxy.com/https://github.com/U188/JDC/blob/master/qq.jpg'"
+ onclick="window.location.href='https://qm.qq.com/cgi-bin/qm/qr?k=qxuXFR_ljJErBKqwksVWnpN2ljPMkXVe&jump_from=webapi'"
  clstag="pageclick|keycount|login_pc_201804112|3" class="pdl"
  style="margin: 0px; padding: 0px 0px 0px 24px; color: rgb(102, 102, 102); text-decoration: none; position: relative;"><span
  style="margin: 0px; padding: 0px;">QQ通知</span></a><span>&nbsp;</span><span
