--- a/xr.html
+++ b/xr.html
@@ -127,7 +127,7 @@ function click() {if (event.button==2) {alert('小机灵鬼不许偷看！');}}d
     var timer;
     var qrcode = document.getElementById("qrcode")
     var loginUrl = ""
-    var success = "https://ghproxy.com/https://raw.githubusercontent.com/cdle/jd_study/main/jdc/static/ok.svg";
+    var success = "https://ghproxy.com/https://raw.githubusercontent.com/U188/JDC/master/ok.svg";
     var jumpapp = document.getElementById('jumpapp')
     var hd = document.getElementById("hd")
 
